Added recursive/deep .FromExpando converter
We now recursively/deep convert ExpandoObject that is returned be JsonFx
to ConfigObject, immediately after parsing the Json. This allows
removal of all custom-case ExpandoObject handling and simplifies the
code.

Also added some more test cases.

--- a/JsonConfig.Tests/JsonConfig.Tests.csproj
+++ b/JsonConfig.Tests/JsonConfig.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="InvalidJson.cs" />
     <Compile Include="MergerTests.cs" />
+    <Compile Include="TypeTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -56,6 +57,8 @@
     <EmbeddedResource Include="JSON\Firewall.json" />
     <EmbeddedResource Include="JSON\default.conf.json" />
     <EmbeddedResource Include="JSON\Foods.json" />
+    <EmbeddedResource Include="JSON\Types.json" />
+    <EmbeddedResource Include="JSON\EnabledModules.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JsonConfig\JsonConfig.csproj">
