--- a/JsonConfig.Tests/packages.config
+++ b/JsonConfig.Tests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JsonFx" version="2.0.1209.2802" targetFramework="net40" />
-  <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" />
+  <package id="NUnit" version="2.6.3" targetFramework="net4" />
 </packages>
